--- a/src/main/resources/templates/editTemplate.html
+++ b/src/main/resources/templates/editTemplate.html
@@ -5,13 +5,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <form method="post" th:object="${editedNote}">
-        <p th:field="*{id}" th:value="${param.id}">Note to be edited: ${param.id}</p>
+    <form action="#" th:action="@{/edit}" method="post" th:object="${noteEdited}">
+        <p>Note to be edited: <span th:text="${noteEdited.id}"></span></p>
         <label for="titleEdit"></label>
-        <input id="titleEdit" th:type="text" th:field="*{title}">
+        <input id="titleEdit" type="text" th:field="*{title}" required>
         <label for="contentEdit"></label>
-        <input id="contentEdit" th:type="text" th:field="*{content}">
-        <button th:type="submit" value="submit"></button><button type="reset" value="reset"></button>
+        <input id="contentEdit" type="text" th:field="*{content}" required>
+        <br/>
+        <br/>
+        <button th:type="submit" value="submit">submit</button>
+        <button type="reset" value="reset">reset</button>
     </form>
 </body>
 </html>
